# Pharma_Compliance_Dashboard

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyproject_fixed.toml  requirements.txt  seed.py  startup.sh  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: main_pharma-dashboard-app.yml
pharma_dashboard/: __init__.py  app.py  db.py  models.py  schema.py  utils.py
