[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "[project]
name = "pharma_dashboard"
version = "0.1.0"
description = "A Streamlit-based pharma training compliance intelligence dashboard with Supabase backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Mark Haynie" }
]

dependencies = [
  "streamlit>=1.30",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "supabase-py>=2.0",
  "python-dotenv>=1.0",
  "matplotlib>=3.8",
  "psycopg2-binary>=2.9"
]

[project.urls]
Homepage = "https://github.com/yourusername/pharma-compliance-dashboard"
Documentation = "https://github.com/yourusername/pharma-compliance-dashboard"
Source = "https://github.com/yourusername/pharma-compliance-dashboard"

[project.scripts]
pharma-dashboard = "pharma_dashboard.app:main"